--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "micro-sso-gateway",
   "version": "1.0.0",
-  "description": "A general package for building sapify secure apis",
-  "main": "lib/index.js",
+  "description": "A REST gateway api that fronts the micro-sso-domain api. Collates and slices granular domain resources into business-centric pseudo-resources",
+  "main": "lib/server.js",
   "scripts": {
-    "build": "shjs build.coffee",
+    "build": "shjs build.coffee"
   },
   "repository": {
     "type": "git",
@@ -12,7 +12,6 @@
   },
   "keywords": [
     "secure",
-    "socket.io",
     "REST"
   ],
   "author": "biofractal <biofractal@gmail.com> (https://github.com/biofractal)",
@@ -22,13 +21,11 @@
   },
   "homepage": "https://github.com/biofractal/micro-sso-gateway",
   "dependencies": {
-    "@gp-technical/sapify-sso": "^1.0.3",
-    "app-root-path": "^1.0.0",
+    "@gp-technical/sapify-api": "^1.0.10",
+    "async": "^1.0.0",
+    "body-parser": "^1.12.4",
+    "dotenv": "^1.1.0",
     "express": "^4.10.6",
-    "mongoose": "^3.8.24",
-    "request": "^2.55.0",
-    "require-dir": "^0.3.0",
-    "resourcejs": "git://github.com/travist/resourcejs.git",
-    "socket.io": "^1.3.5"
+    "winston": "^1.0.0"
   }
 }
