--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/biofractal/micro-sso-gateway",
   "dependencies": {
     "@gp-technical/sapify-api": "^1.0.119",
+    "@gp-technical/sapify-proxy": "^1.0.19",
     "async": "^1.0.0",
     "body-parser": "^1.12.4",
     "dotenv": "^1.1.0",
