--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "homepage": "https://github.com/biofractal/micro-sso-gateway",
   "dependencies": {
-    "@gp-technical/sapify-api": "^1.0.119",
+    "@gp-technical/sapify-api": "^1.0.125",
     "@gp-technical/sapify-proxy": "^1.0.19",
     "async": "^1.0.0",
     "body-parser": "^1.12.4",
+    "cookie-parser": "^1.3.5",
     "dotenv": "^1.1.0",
     "express": "^4.10.6",
+    "jade": "^1.10.0",
     "winston": "^1.0.0"
   }
 }
