--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   },
   "homepage": "https://github.com/biofractal/micro-sso-gateway",
   "dependencies": {
-    "@gp-technical/sapify-api": "^1.0.125",
-    "@gp-technical/sapify-proxy": "^1.0.19",
-    "async": "^1.0.0",
-    "body-parser": "^1.12.4",
+    "@gp-technical/sapify-api": "^1.0.128",
+    "@gp-technical/sapify-proxy": "^1.0.48",
+    "async": "^1.2.1",
+    "body-parser": "^1.13.1",
     "cookie-parser": "^1.3.5",
-    "dotenv": "^1.1.0",
-    "express": "^4.10.6",
-    "jade": "^1.10.0",
+    "dotenv": "^1.2.0",
+    "express": "^4.13.0",
+    "jade": "^1.11.0",
+    "node-sass": "^3.2.0",
     "winston": "^1.0.0"
   }
 }
